Reverted some commits

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=RockServers;User=root;Password=MorganArthur2030!;"
+    "DefaultConnection": "Server=127.0.0.1;Database=RockServers;User=root;Password=__DB_PASSWORD;"
   },
   "JWT": {
     "Issuer": "http://localhost:5191",
