--- a/appsettings.json
+++ b/appsettings.json
@@ -16,8 +16,8 @@
     "SecretKey": ""
   },
   "JWT": {
-    "Issuer": "http://localhost:5191",
-    "Audience": "http://localhost:5191",
+    "Issuer": "https://rockservers-production.up.railway.app",
+    "Audience": "https://rockservers-production.up.railway.app",
     "SigningKey": ""
   }
 }
